objects/All_Contacts__c.object
<CustomObject>
    <description>A contact snapshot, publicly available for org-wide searches.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>See_More_Detail__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker/Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRD_Num__c</fullName>
        <formula>See_More_Detail__r.CRD_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRD #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>See_More_Detail__r.Contact_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>See_More_Detail__r.Contact_Type_Old__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>See_More_Detail__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Office__c</fullName>
        <formula>text(See_More_Detail__r.Field_Office__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>text(See_More_Detail__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>See_More_Detail__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>text(See_More_Detail__r.Job_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>See_More_Detail__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <formula>TRIM(
See_More_Detail__r.OtherStreet + BR() +
See_More_Detail__r.OtherCity + &apos;, &apos; +
See_More_Detail__r.OtherState + &apos; &apos; +
See_More_Detail__r.OtherPostalCode + BR() +
See_More_Detail__r.OtherCountry
)</formula>
        <label>Office Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <formula>See_More_Detail__r.Other_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Job_Title__c</fullName>
        <formula>See_More_Detail__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <formula>See_More_Detail__r.OtherPhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <formula>See_More_Detail__r.Secondary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>TRIM(
See_More_Detail__r.MailingStreet + BR() +
See_More_Detail__r.MailingCity + &apos;, &apos; +
See_More_Detail__r.MailingState + &apos; &apos; +
See_More_Detail__r.MailingPostalCode + BR() +
See_More_Detail__r.MailingCountry
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Title__c</fullName>
        <formula>See_More_Detail__r.Professional_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>See_More_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>See More Detail</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>All Contacts</relationshipLabel>
        <relationshipName>All_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <formula>See_More_Detail__r.Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>See_More_Detail__r.Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <formula>See_More_Detail__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <formula>See_More_Detail__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <label>All Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Address__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Work_Email__c</columns>
        <columns>Field_Office__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>